Spellcasting complete? corruption stat configurable + override functionality upcasting spells corruption gain based on level+favored Modified ability use dialog for corruption casting

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -10,6 +10,11 @@
       "NPC": {
         "Label": "Symbaroum 5e NPC"
       }
+    },
+    "Corruption": {
+      "Label": "Corruption",
+      "ShortDesc": "Current Corruption: {value}/{max}",
+      "Custom": "Custom"
     }
   }
 }
