translation key fixes

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -17,7 +17,6 @@
         "Label": "Symbaroum 5e NPC"
       }
     },
-<<<<<<< HEAD
     "Spell": {
       "Favored": "Favored",
       "MaxLevel": "Maximum Spell Level"
@@ -33,7 +32,10 @@
       "Temporary": "Temp",
       "Permanent": "Permanent",
       "Current": "Current",
-      "Threshold": "Threshold"
+      "Threshold": "Threshold",
+      "ShortDesc": "Current Corruption: {value}/{max}",
+      "Custom": "Custom",
+      "GainQuestion": "Suffer Corruption"
     },
     "Level": {
       "Zeroth": "0th",
@@ -46,12 +48,6 @@
       "Seventh": "7th",
       "Eighth": "8th",
       "Nineth": "9th"
-=======
-    "Corruption": {
-      "Label": "Corruption",
-      "ShortDesc": "Current Corruption: {value}/{max}",
-      "Custom": "Custom"
->>>>>>> 48356ec8e34119de02c2be2d4d335fa99e6dce3e
     }
     
   }
