SYB5E-20 greater artifact item rarity (#9)

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -15,6 +15,11 @@
       },
       "NPC": {
         "Label": "Symbaroum 5e NPC"
+      },
+      "Item": {
+        "Rarity": {
+          "GreaterArtifact": "Greater Artifact"
+        }
       }
     },
     "Spell": {
