SYB Currencies implemented (pc/npc) More removal of unused functions

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -48,6 +48,11 @@
         "Alchemical": "Alchemical"
       }
     },
+    "Currency": {
+      "Thaler": "Thaler",
+      "Shilling": "Shilling",
+      "Orteg": "Orteg"
+    },
     "Spell": {
       "Favored": "Favored",
       "MaxLevel": "Maximum Spell Level"
