origin/approach renames. working on fixing the sheet's slot display issue for half-casters

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -10,6 +10,7 @@
       "SubModule": "Initializing Sub-Module: {name}"
     },
     "Sheet" : {
+      "Origin": "Origin",
       "Character": {
         "Label": "Symbaroum 5e Character"
       },
@@ -46,6 +47,9 @@
       },
       "Subtype": {
         "Alchemical": "Alchemical"
+      },
+      "Class": {
+        "Approach": "Approach"
       }
     },
     "Currency": {
