disabled fields when non-editable, Cost(GP)->Cost(Th)

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -56,7 +56,8 @@
     "Currency": {
       "Thaler": "Thaler",
       "Shilling": "Shilling",
-      "Orteg": "Orteg"
+      "Orteg": "Orteg",
+      "CostThaler": "Cost (Th)"
     },
     "Spell": {
       "Favored": "Favored",
