Custom item corruption (#17)
SYB5E-81

* custom corruption fields

* Items can now define custom corruption values.
Is not yet included in ability use dialogs for anything but spells.

* Custom corruption controls operate/target indepenedently

* all items can now generate custom/modified corruption.
Non-spell items are currently unable to bypass corruption gain.

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -72,6 +72,7 @@
     "Corruption": {
       "Label": "Corruption",
       "Temporary": "Temp",
+      "TemporaryFull": "Temporary",
       "Permanent": "Permanent",
       "Current": "Current",
       "Threshold": "Threshold",
