Soulles trait and redirection of corruption damage to max health. (#18)

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -12,6 +12,10 @@
     },
     "Sheet" : {
       "Origin": "Origin",
+      "Soulless" : {
+        "Hint": "Corruption damage is applied to current and maximum health.",
+        "Name": "Soulless"
+      },
       "Character": {
         "Label": "Symbaroum 5e Character"
       },
