SYB5E-82 Additional Creature Types

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -115,6 +115,10 @@
         "ExtendedRestOvernight": "Extended Rest (24h+, New Day)",
         "ExtendedRestNormal": "Extended Rest (24h+)"
       }
+    },
+    "Creature": {
+      "Abomination": "Abomination",
+      "Phenomenon": "Phenomenon"
     }
   }
 }
