Added plurals for new creature types

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -118,7 +118,9 @@
     },
     "Creature": {
       "Abomination": "Abomination",
-      "Phenomenon": "Phenomenon"
+      "AbominationPl": "Abominations",
+      "Phenomenon": "Phenomenon",
+      "PhenomenonPl": "Phenomena"
     }
   }
 }
