Sheet Config finally woking for all use cases.

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -16,7 +16,7 @@
         "name": "NPC Background Images"
       },
       "config-default-dnd5e":{
-        "name": "Default DnD5E Settings"
+        "name": "Default DnD5E Settings for Character and NPC"
       },
       "config-color-picker":{
         "name": "Plain Color Picker"
