Bestiary Corrections for: Drug Peddler, Falgellant, Keeper Witch & Knight (#25)
* Bestiary Corrections for:Drug Peddler, Falgellant, Keeper Witch & Knight.

* Bestiary db update

* User Guide, Splash Sceen and System Cover done.   Removed Ashe sample background.

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -7,7 +7,7 @@
       },
       "config-menu-label":{
         "name": "Configure Symbaroum 5E Settings",
-        "hint": "Configure PC and NPC sheet background color (These are Client based settings)."
+        "hint": "Configure PC and NPC sheet background image/color and font colours (These are Client based settings)."
       },
       "config-pc-char-bg-img":{
         "name": "Character Background Images"
