layout changes for favored spell status

--- a/symbaroum5ecore/symbaroum5ecore/lang/en.json
+++ b/symbaroum5ecore/symbaroum5ecore/lang/en.json
@@ -108,6 +108,8 @@
     },
     "Spell": {
       "Favored": "Favored",
+      "NotFavored": "Not Favored",
+      "NeverFavored": "Never Favored",
       "MaxLevel": "Maximum Spell Level"
     },
     "Shadow": {
