Closes #2. Actor's can be marked 'thoroughly corrupt'. Also suppresses numerical display of corruption, though it is still tracked in the background.

--- a/lang/en.json
+++ b/lang/en.json
@@ -125,6 +125,8 @@
       "Permanent": "Permanent",
       "Current": "Current",
       "Threshold": "Threshold",
+      "ThoroughFull": "Thoroughly Corrupted",
+      "ThoroughShort": "Thoroughly",
       "ShortDesc": "Current Corruption: {value}/{max}",
       "Custom": "Custom",
       "GainQuestion": "Suffer Corruption",
