--- a/lang/en.json
+++ b/lang/en.json
@@ -48,7 +48,14 @@
       "config-npc-text-selector":{
         "name": "Select NPC Text Color"
       }
-    }, 
+    },
+    "menu": {
+      "forceImport": {
+        "name": "Re-run Module Initial Import",
+        "label": "Import Module Content",
+        "hint": "Forces a reimport to occur as if this is the module's initial launch."
+      }
+    },
     "Never": "Never",
     "Init" : {
       "SubModule": "Initializing Sub-Module: {name}"
