--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {
-  "SYB5E" : {
+  "SYB5E": {
     "Error": {
       "SpellLevelExceedsMax": "Base spell level exceeds maximum spell level of this actor."
     },
@@ -8,48 +8,53 @@
         "name": "Log Debug Output",
         "hint": "Prints extended debug information to the console."
       },
-      "config-menu-label":{
+      "config-menu-label": {
         "name": "Configure Symbaroum 5E Settings",
         "hint": "Configure PC and NPC sheet background image/color and font colours (These are Client based settings)."
       },
-      "config-pc-char-bg-img":{
+      "config-pc-char-bg-img": {
         "name": "Character Background Images"
       },
-      "config-npc-char-bg-img":{
+      "config-npc-char-bg-img": {
         "name": "NPC Background Images"
       },
-      "config-default-dnd5e":{
+      "config-default-dnd5e": {
         "name": "Default DnD5E Settings for Character and NPC"
       },
-      "config-color-picker":{
+      "config-color-picker": {
         "name": "Plain Color Picker"
       },
-      "config-reset-all-button":{
+      "config-reset-all-button": {
         "name": "Reset all settings to defaults"
       },
-      "config-reset-note":{
+      "config-reset-note": {
         "name": "NOTE: Submit and Reset will cause FVTT to reload."
       },
-      "config-submit-button":{
+      "config-submit-button": {
         "name": "Submit"
       },
-      "config-reset-pc-config":{
+      "config-reset-pc-config": {
         "name": "Reset PC Config"
       },
-      "config-reset-npc-config":{
+      "config-reset-npc-config": {
         "name": "Reset NPC Config"
       },
-      "config-pc-color-selector":{
+      "config-pc-color-selector": {
         "name": "Select PC Background Color"
       },
-      "config-npc-color-selector":{
+      "config-npc-color-selector": {
         "name": "Select NPC Background Color"
       },
-      "config-pc-text-selector":{
+      "config-pc-text-selector": {
         "name": "Select PC Text Color"
       },
-      "config-npc-text-selector":{
+      "config-npc-text-selector": {
         "name": "Select NPC Text Color"
+      }
+    },
+    "journal": {
+      "widejournal": {
+        "name": "Symbaroum Wide Journal"
       }
     },
     "menu": {
@@ -60,12 +65,12 @@
       }
     },
     "Never": "Never",
-    "Init" : {
+    "Init": {
       "SubModule": "Initializing Sub-Module: {name}"
     },
-    "Sheet" : {
+    "Sheet": {
       "Origin": "Origin",
-      "Soulless" : {
+      "Soulless": {
         "Hint": "Corruption damage is applied to current and maximum health.",
         "Name": "Soulless"
       },
